# cloud-render

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
functions/fake_render_worker/: handler.py  test_message.json
functions/render_trigger/src/: handler.py
functions/render_trigger/test/: test_handler.py
functions/render_trigger/test/resources/: s3-put-event.json  test-data.json  test-date.json
tasks/render-worker/: .dockerignore  .gitignore  Dockerfile
tasks/render-worker/blender_binary/: blender-3.6.2-linux-x64.tar.xz
tasks/render-worker/src/: render_with_gpu.py  render_worker.py  requirements.txt
tasks/render-worker/test/: test_render_worker.py
tasks/render-worker/test/resources/: default_cube.blend  test-data.json  test_messages.json  test_msg_entry.json
